# doe-egot-dtm

./: CMakeLists.txt  README.md
logs/: 2021_09_02-14_15_22.xml  demo.txt
scripts/: DTMServer_loopback2_2045xml.py  Trustlog_testing1.xml  dtm_server.py
src/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  dtm_testing.cpp  main.cpp
